# cpp_thumbnail_generator

./: CMakeLists.txt  README.md  ThumbnailGenerator  compile_commands.json  run.sh
.cache/clangd/index/: Main.cpp.9B5C06CBE98622A0.idx  ThumbnailGenerator.cpp.187160649B02AA6F.idx  ThumbnailGenerator.hpp.1954E12F78148290.idx
src/: Main.cpp  ThumbnailGenerator.cpp
src/include/: ThumbnailGenerator.hpp
